--- a/index.html
+++ b/index.html
@@ -19,6 +19,31 @@
 
 
     <!-- Footer -->
+    <footer>
+        <div class="maghanga">
+            <div class="robert">
+                <h1>QUICK NAVIGATION</h1>
+                <ul>
+                    <li><a href="#">HOME</a> </li> 
+                    <li><a href="#">WORKS</a> </li> 
+                    <li><a href="#">CONSULTATION</a> </li> 
+                    <li><a href="#">BUSINESS SOLUTION</a> </li> 
+                    <li><a href="#">SERVICES</a> </li> 
+                    <li><a href="#">CONTACTS</a> </li> 
+                </ul>
+            </div>
+                <div class="mwaliko">
+                    <h2>QUICK REACH OUT</h2>
+                    <ul>
+                        <li>+44 555 12102</li>
+                        <li>info@archie.net</li>
+                    </ul>
+                </div>
+            
+                </div>
+                <p>copyright © 2024. All rights reserved archie</p>
+    </footer>
+   
 
 
     <!-- Import script -->
