--- a/index.html
+++ b/index.html
@@ -2,26 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title>Index</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
+  <title>Index</title>
 </head>
 
 <body>
-    <!-- Header -->
-    
-   
-    <!-- Component 2 -->
+  <!-- clients -->
+    <div class="paragraph">
+      <p>our clients come from <br> some of these companies</p>
+    </div>
+    <div class="image">
+      <div> <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGAT0u8kEuD-VxortdZspxYdxS49QDIKJLnrG6xP61xQ&s">
+      </div>
+      <div> <img src="https://www.shutterstock.com/image-photo/kiev-ukraine-march-31-2015-260nw-275940803.jpg">
+      </div>
+      <div><img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyC07Dwzms8ANX4yvUB_uE52nNOIDVucpB6nfLZk4WfQ&s">
+      </div>
+      <div> <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQowTXnXUwgN3-wyoH1O1rf2BffRLxVON8OB0TnXeME7Q&s">
+      </div>
+
+    </div>
 
 
-    <!-- Component 3 -->
 
-
-    <!-- Footer -->
-
-
-    <!-- Import script -->
     <script src="index.js"></script>
 </body>
 
